# n32l4xx-hal

./: .gitignore  Cargo.toml  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  PORT_STATUS.md  README.md  SPRINT.md
src/: adc.rs  can.rs  fmc.rs  gpio.rs  i2c.rs  lib.rs  pwm.rs  serial.rs  spi.rs
src/dma/: mod.rs
src/gpio/: alt.rs  convert.rs  dynamic.rs  partially_erased.rs
src/gpio/alt/: altmap.rs
src/i2c/: dma.rs
src/rcc/: enable.rs  mod.rs
src/serial/: uart_impls.rs
tools/gpio_af/: .gitignore  README.md  adc_channel_um.tsv  af_map.txt  af_table_um.tsv  build_af_table.py  generate_altmap.py  parse_ds_adc.py  parse_um_bbox2.py  pins.tsv  um_af_remap_raw.txt
