[package]
edition = "2021"
rust-version = "1.60"

authors = [
    "Sparrowgrine <nxm@reduxrobotics.com>",
    "guineawheek <guineawheek@gmail.com>",
    "mac.w (N32L4xx port)",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "HAL for the NSING N32L4xx series microcontrollers (ported from n32g4xx-hal)"
documentation = "https://docs.rs/n32l4xx-hal"
keywords = [
    "arm",
    "cortex-m",
    "n32l4xx",
    "hal",
]
license = "Apache-2.0 OR MIT"
name = "n32l4xx-hal"
readme = "README.md"
repository = "https://github.com/HeroesLament/n32l4xx-hal"
version = "0.1.0"

[package.metadata.docs.rs]
features = ["n32l403", "rtic2", "defmt"]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
defmt = { version = "0.3.5", optional = true }
bxcan = { package = "bxcan-ng", version = "0.8.0" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
nb = "1.1"
rand_core = "0.6.4"
n32l4 = { path = "../n32l4-pac", features = ["critical-section"] }
stm32-usbd = { version = "0.7.0"}
embedded-dma = "0.2.0"
bare-metal = { version = "1" }
void = { default-features = false, version = "1.0.2" }
fugit = "0.3.7"
fugit-timer = "0.1.3"
cast = "0.3.0"

# rtic1
rtic-monotonic = { version = "1.0", optional = true }
systick-monotonic = { version = "1.0.1", optional = true }
cortex-m-rtic = { version = "1.1.4", features = ["test-critical-section"], optional = true }
# rtic2
rtic-time = { version = "1.3", optional = true }
rtic-monotonics = { version = "1.5", features = ["cortex-m-systick"], optional = true }
rtic = { version = "2.0.1", features = ["thumbv7-backend"], optional = true }

enumflags2 = "0.7.8"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
vcell = "0.1.3"
document-features = "0.2"
bytemuck = "1.20.0"

[dependencies.time]
version = "0.3.14"
default-features = false

[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2.7"
features = ["unproven"]

[dependencies.embedded-hal]
version = "1.0"

[dependencies.embedded-hal-nb]
version = "1.0"


[dev-dependencies]
defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = [ "print-defmt" ] }
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.5.0"
heapless = "0.8"
panic-halt = "0.2.0"
usb-device = "0.3.1"
usbd-serial = "0.2.0"
micromath = "2"
dwt-systick-monotonic = "1.1"
rtt-target = { version = "0.5.0" }
ushell = "0.3.5"

[dev-dependencies.time]
version = "0.3"
default-features = false
features = ["macros"]

[features]
#! Use one of the supported N32L4-series device features:
#! `n32l403` (SERVO42D), `n32l406` (SERVO57D).
default = ["rt"]
rt = ["n32l4/rt"]

n32l403 = ["n32l4/n32l403"]
n32l406 = ["n32l4/n32l406"]

## Support monotonic timers for RTICv1.
rtic1 = ["dep:rtic-monotonic", "dep:systick-monotonic", "cortex-m-rtic"]

## Support monotonic timers for RTICv2. Requires nightly.
rtic2 = ["dep:rtic-time", "dep:rtic-monotonics", "dep:rtic"]

## Implementation of `defmt::Format` for public enums and structures.
defmt = ["dep:defmt", "fugit/defmt", "nb/defmt-0-3", "embedded-hal/defmt-03", "usb-device/defmt"]

rng = []
dac = []

[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "z"
